--- a/src/main/resources/templates/project/projectDetailChart.html
+++ b/src/main/resources/templates/project/projectDetailChart.html
@@ -22,25 +22,25 @@
             <nav aria-label="breadcrumb" role="navigation">
                 <ol class="breadcrumb bg-light">
                     <li class="breadcrumb-item active" aria-selected="true">
-                        <a th:href="'/project/'+${project.projectCode}">요약정보</a>
+                        <a th:href="'project/'+${project.projectCode}">요약정보</a>
                     </li>
                     <li class="breadcrumb-item" id="normal-info">
-                        <a th:href="'/project/detailInfo/'+${project.projectCode}">기본정보</a>
+                        <a th:href="'project/detailInfo/'+${project.projectCode}">기본정보</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a th:href="'/projectMemberInfo/'+${project.projectCode}">리소스</a>
+                        <a th:href="'projectMemberInfo/'+${project.projectCode}">리소스</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a th:href="'/projectTask/'+${project.projectCode}">프로젝트 작업</a>
+                        <a th:href="'projectTask/'+${project.projectCode}">프로젝트 작업</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a th:href="'/projectGantt/'+${project.projectCode}">배정현황</a>
+                        <a th:href="'projectGantt/'+${project.projectCode}">배정현황</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a th:href="'/projectIssue/'+${project.projectCode}">이슈</a>
+                        <a th:href="'projectIssue/'+${project.projectCode}">이슈</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a th:href="'/projectOutput/'+${project.projectCode}">산출물</a>
+                        <a th:href="'projectOutput/'+${project.projectCode}">산출물</a>
                     </li>
                 </ol>
 
