--- a/src/main/resources/templates/dashBoard/dashBoardAll.html
+++ b/src/main/resources/templates/dashBoard/dashBoardAll.html
@@ -2,17 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default}">
-
-<title id="pageTitle">종합 대시보드</title>
-<!-- page 고유 CSS 추가 -->
-<th:block layout:fragment="css">
+<head>
+    <title id="pageTitle">종합 대시보드</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
-</th:block>
-
-<!-- page 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
+    <!-- JS -->
     <script src="/js/dashBoard/AllChartDashBoard.js"></script>
-</th:block>
+</head>
+
 
 <div layout:fragment="content">
     <div class="row">
