--- a/src/main/resources/templates/dashBoard/dashBoardUser.html
+++ b/src/main/resources/templates/dashBoard/dashBoardUser.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default}">
-
-<title id="pageTitle">유저 대시보드</title>
-<!-- page 고유 CSS 추가 -->
-<th:block layout:fragment="css">
+<head>
+    <title id="pageTitle">유저 대시보드</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
     <style>
         a:hover {
@@ -13,14 +12,10 @@
             color: #000;
         }
     </style>
-</th:block>
-
-<!-- page 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
+    <!-- JS -->
     <script src="/js/dashBoard/dashBoardChart.js"></script>
     <script src="/js/dashBoard/dashBoardUser.js"></script>
-</th:block>
-
+</head>
 <div layout:fragment="content">
     <div class="row">
         <div class="col-md-3 col-sm-6 grid-margin stretch-card">
