--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,6 @@
                     type="button" data-toggle="minimize">
                 <span class="icon-menu"><i class="fa fa-navicon"></i></span>
             </button>
-            <!-- 언어변경 -->
             <ul class="navbar-nav navbar-nav-right">
                 <li class="nav-item dropdown d-none d-lg-flex">
                     <a class="nav-link" href="/myPage">My Page</a>
@@ -33,126 +32,6 @@
                         <input class="btn nav-link dropdown-toggle" type="submit" value="로그아웃"/>
                     </form>
                 </li>
-                <!-- 알림 -->
-                <li class="nav-item dropdown"><a
-                        class="nav-link count-indicator dropdown-toggle"
-                        id="notificationDropdown" href="#" data-toggle="dropdown"> <i
-                        class="fa fa-bell-o mx-0"></i> <span class="count"></span>
-                </a>
-                    <div
-                            class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list"
-                            aria-labelledby="notificationDropdown">
-                        <a class="dropdown-item">
-                            <p class="mb-0 font-weight-normal float-left">You have 4 new
-                                notifications</p> <span
-                                class="badge badge-pill badge-warning float-right">View
-								all</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-success">
-                                    <i class="icon-info mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-medium">Application
-                                    Error</h6>
-                                <p class="font-weight-light small-text">Just now</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-warning">
-                                    <i class="icon-speech mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-medium">Settings</h6>
-                                <p class="font-weight-light small-text">Private message</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-info">
-                                    <i class="icon-envelope mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-medium">New user
-                                    registration</h6>
-                                <p class="font-weight-light small-text">2 days ago</p>
-                            </div>
-                        </a>
-                    </div>
-                </li>
-                <!-- 알림 end -->
-                <!-- 쪽지 -->
-                <li class="nav-item dropdown"><a
-                        class="nav-link count-indicator dropdown-toggle"
-                        id="messageDropdown" href="#" data-toggle="dropdown"
-                        aria-expanded="false"> <i class="fa fa-envelope-o"></i> <span
-                        class="count"></span>
-                </a>
-                    <div
-                            class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list"
-                            aria-labelledby="messageDropdown">
-                        <div class="dropdown-item">
-                            <p class="mb-0 font-weight-normal float-left">You have 7
-                                unread mails</p>
-                            <span class="badge badge-info badge-pill float-right">View
-								all</span>
-                        </div>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="/images/faces/face4.jpg" alt="image"
-                                     class="profile-pic">
-                            </div>
-                            <div class="preview-item-content flex-grow">
-                                <h6 class="preview-subject ellipsis font-weight-medium">
-                                    David Grey <span
-                                        class="float-right font-weight-light small-text">1
-										Minutes ago</span>
-                                </h6>
-                                <p class="font-weight-light small-text">The meeting is
-                                    cancelled</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="/images/faces/face2.jpg" alt="image"
-                                     class="profile-pic">
-                            </div>
-                            <div class="preview-item-content flex-grow">
-                                <h6 class="preview-subject ellipsis font-weight-medium">
-                                    Tim Cook <span class="float-right font-weight-light small-text">15
-										Minutes ago</span>
-                                </h6>
-                                <p class="font-weight-light small-text">New product launch</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="/images/faces/face3.jpg" alt="image"
-                                     class="profile-pic">
-                            </div>
-                            <div class="preview-item-content flex-grow">
-                                <h6 class="preview-subject ellipsis font-weight-medium">
-                                    Johnson <span class="float-right font-weight-light small-text">18
-										Minutes ago</span>
-                                </h6>
-                                <p class="font-weight-light small-text">Upcoming board
-                                    meeting</p>
-                            </div>
-                        </a>
-                    </div>
-                </li>
-                <!-- 쪽지 end -->
             </ul>
 
             <button
@@ -202,7 +81,7 @@
                         <div class="nav-link">
                             <div class="profile-image">
                                 <img th:if="${#authentication.Principal.Users.userPhoto != null}" th:src="${#authentication.Principal.Users.userPhoto}" class="bg-success">
-                                <img th:if="${#authentication.Principal.Users.userPhoto == null}" src="/img/user.png" class="bg-success">
+                                <img th:if="${#authentication.Principal.Users.userPhoto == null}" th:src="@{/img/user.png}" class="bg-success">
                             </div>
                             <div class="profile-name">
                                 <p class="name" th:text="${#authentication.Principal.Users.userName}"></p>
