--- a/src/main/resources/templates/project/projectDetailChart.html
+++ b/src/main/resources/templates/project/projectDetailChart.html
@@ -2,18 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default}">
-
-<title id="pageTitle">프로젝트 요약 정보</title>
-
-<!-- page 고유 CSS 추가 -->
-<th:block layout:fragment="css">
+<head>
+    <title id="pageTitle">프로젝트 요약 정보</title>
     <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
-</th:block>
-
-<!-- page 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
     <script src="/js/project/projectChart.js"></script>
-</th:block>
+</head>
+
 
 <div layout:fragment="content">
     <!-- project nav -->
