--- a/src/main/resources/templates/dashBoard/dashBoardAll.html
+++ b/src/main/resources/templates/dashBoard/dashBoardAll.html
@@ -5,9 +5,9 @@
 <head>
     <title id="pageTitle">종합 대시보드</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
+    <link rel="stylesheet" th:href="@{/css/dashBoard/dashBoardStyle.css}">
     <!-- JS -->
-    <script src="/js/dashBoard/AllChartDashBoard.js"></script>
+    <script th:src="@{/js/dashBoard/AllChartDashBoard.js}"></script>
 </head>
 
 
