--- a/src/main/resources/templates/project/projectDetailChart.html
+++ b/src/main/resources/templates/project/projectDetailChart.html
@@ -4,8 +4,8 @@
       layout:decorate="~{layout/default}">
 <head>
     <title id="pageTitle">프로젝트 요약 정보</title>
-    <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
-    <script src="/js/project/projectChart.js"></script>
+    <link rel="stylesheet" th:href="@{/css/dashBoard/dashBoardStyle.css}">
+    <script th:src="@{/js/project/projectChart.js}"></script>
 </head>
 
 
