--- a/src/main/resources/templates/project/projectGantt.html
+++ b/src/main/resources/templates/project/projectGantt.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/default}">
 <head>
     <title id="pageTitle">프로젝트 기본정보</title>
-    <script th:inline="javascript" src="/js/project/projectGantt.js"></script>
+    <script th:inline="javascript" th:src="@{/js/project/projectGantt.js}"></script>
 </head>
 
 <div layout:fragment="content">
