--- a/src/main/resources/templates/dashBoard/dashBoardDetail.html
+++ b/src/main/resources/templates/dashBoard/dashBoardDetail.html
@@ -5,12 +5,12 @@
 <head>
     <title id="pageTitle">상세 대시보드</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/dashBoard/dashBoardStyle.css">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" th:href="@{/css/dashBoard/dashBoardStyle.css}">
+
     <!-- JS -->
-	<script th:src="@{/js/dashBoard/projectChartDashBoard.js}" src="/js/dashBoard/projectChartDashBoard.js"></script>
+	<script th:src="@{/js/dashBoard/projectChartDashBoard.js}"></script>
 <!--    <script src="/js/project/projectChart.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+
 </head>
 
 <div layout:fragment="content">
