--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -16,27 +16,28 @@
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/magnific-popup.css">
         <link rel="stylesheet" href="/css/project/projectDetail.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link href="//cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 
         <!-- content css -->
         <th:block layout:fragment="css"></th:block>
 
         <!-- common js -->
         <script src="/js/default.bundle.base.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <script src="/js/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script><!-- google chart -->
+        <script type="text/javascript" src="//www.gstatic.com/charts/loader.js"></script><!-- google chart -->
         <script type="text/javascript" src="/js/magnific-popup.js"></script>
-
+        <script src="//cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
         <script src="/js/hoverable-collapse.js"></script><!-- nav 관련 -->
         <script src="/js/misc.js"></script><!-- nav 관련 -->
         <script src="/js/settings.js"></script><!-- 메신저로 수정/대체 필요한 부분 -->
-        <script src="https://kit.fontawesome.com/722f4a5970.js" crossorigin="anonymous"></script>
+        <script src="//kit.fontawesome.com/722f4a5970.js" crossorigin="anonymous"></script>
 
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script src="/js/project/projectDuty.js"></script>
-		
+
         <!-- content js -->
         <th:block layout:fragment="script"></th:block>
     </head>
