--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -30,6 +30,11 @@
         <script type="text/javascript" src="//www.gstatic.com/charts/loader.js"></script><!-- google chart -->
         <script type="text/javascript" src="/js/magnific-popup.js"></script>
         <script src="//cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js"></script>
+        <script type="text/javascript">
+            // select2 초기화
+            $('select').select2({});
+        </script>
         <script src="/js/hoverable-collapse.js"></script><!-- nav 관련 -->
         <script src="/js/misc.js"></script><!-- nav 관련 -->
         <script src="/js/settings.js"></script><!-- 메신저로 수정/대체 필요한 부분 -->
