[0709_dashboard이외 미작동/오작동 코드 링크 제거]

--- a/src/main/resources/templates/dashBoard/dashBoardUser.html
+++ b/src/main/resources/templates/dashBoard/dashBoardUser.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="bg-secondary m-0 p-2">
-                    <a href="/myProjects" class="text-gray"><span class="pl-3 align-items-center">more</span><i class="fa fa-angle-double-right float-right pr-3 pt-1"></i></a>
+                    <a href="javascript:void(0);" class="text-gray"><span class="pl-3 align-items-center">more</span><i class="fa fa-angle-double-right float-right pr-3 pt-1"></i></a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="bg-secondary m-0 p-2">
-                    <a href="/projectList" class="text-gray"><span class="pl-3 align-items-center">more</span><i class="fa fa-angle-double-right float-right pr-3 pt-1"></i></a>
+                    <a href="javascript:void(0);" class="text-gray"><span class="pl-3 align-items-center">more</span><i class="fa fa-angle-double-right float-right pr-3 pt-1"></i></a>
                 </div>
             </div>
         </div>
