--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/myPage">My Page</a>
                 </li>
                 <li class="nav-item dropdown d-none d-lg-flex">
-                    <a class="nav-link" id="project-admin-btn" href="/admin/main">Admin</a>
+                    <a class="nav-link" id="project-admin-btn" href="javascript:void(0);">Admin</a>
                 </li>
                 <li class="nav-item dropdown d-none d-lg-flex">
                     <form action="/logout" method="post">
@@ -130,9 +130,9 @@
                         <div class="collapse" id="myWork-nav">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item d-none d-lg-block"><a class="nav-link"
-                                                                          href="/myProjects">내 작업</a></li>
+                                                                          href="javascript:void(0);">내 작업</a></li>
                                 <li class="nav-item d-none d-lg-block"><a class="nav-link"
-                                                                          href="/calendar">일정관리</a></li>
+                                                                          href="javascript:void(0);">일정관리</a></li>
                             </ul>
                         </div>
                     </li>
@@ -186,11 +186,11 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" th:href="@{/chat}">
                             <i class="fab fa-facebook-messenger menu-icon"></i> <span class="menu-title">메신저</span>
                         </a>
-                    </li>
+                    </li>-->
                     <!-- <li class="nav-item">
                       <a class="nav-link" href="#">
                         <i class="icon-bell menu-icon"></i> <span class="menu-title">Notifications</span>
